--- a/docs/styles/Microsoft/Contractions.yml
+++ b/docs/styles/Microsoft/Contractions.yml
@@ -18,13 +18,13 @@ swap:
   is not: isn't
   # it is: it's --> sometimes "it's" isn't grammatically correct
   should not: shouldn't
-  that is: that's
+  # that is: that's --> stilted, especially when replacing "i.e."
   they are: they're
   was not: wasn't
   we are: we're
-  we have: we've
+  # we have: we've --> "we've" sounds awkward in certain contexts
   were not: weren't
-  what is: what's
+  # what is: what's --> personal preference, "what's" sounds stilted
   when is: when's
   where is: where's
   will not: won't
